tests/Driver/unknown-arg.sora
// RUN: sorac -blargh %s 2>&1 | FileCheck %s
// CHECK: error: unknown argument '-blargh'
